potential fix for vh on mobile

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -5,12 +5,12 @@
 main {
     margin: 0 auto -3rem;
     max-width: 700px;
-    min-height: calc(100vh - 6rem);
+    min-height: calc(100% - 6rem);
     padding: 2rem 2rem 0rem;
 
     @media screen and (max-width: 750px) {
         & {
-            min-height: calc(100vh - 7.5rem);
+            min-height: calc(100% - 7.5rem);
         }
     }
 }
