--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -28,7 +28,7 @@
 
 html,
 body {
-    height: 100vh;
+    height: 100%;
     padding: 0px;
 }
 
